@startuml
hide methods
left to right direction
'skinparam linetype ortho

Title "Domain Model"

skinparam class {
    LifeLineBorderColor DarkBlue
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #F0FFFF
    ArrowColor grey
    BorderColor black
}

skinparam packageStyle rectangle

skinparam card {
    LifeLineBorderColor Green
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #F0FFDD
    ArrowColor DarkGrey
    BorderColor Black
}


package "Job Requirements Specification Aggregate"{
entity JobRequirementsSpecification <<entity>><<root>>

    entity Requirements <<entity>>

        card YearsOfExperience <<ValueObject>>{
        }
        card AcademicDegree <<ValueObject>>{
        }
        card Skills <<ValueObject>>{
        }

        Requirements --> YearsOfExperience
        Requirements --> AcademicDegree
        Requirements --> Skills

    JobRequirementsSpecification --> Requirements

}


package "Customer Manager Aggregate"{
entity CustomerManager <<entity>><<root>>

}


package "Job Opening Aggregate"{
entity JobOpening <<entity>><<root>>

    card JobReference <<Value Object>> {
    }
    card TitleOrFunction <<Value Object>> {
    }
    card ContractType <<Value Object>> {
    }
    card Mode <<Value Object>> {
    }
    card Address <<Value Object>> {
    }
    card VacanciesNumber <<Value Object>> {
    }
    card Description <<Value Object>> {
    }

    JobOpening --> JobReference
    JobOpening --> TitleOrFunction
    JobOpening --> ContractType
    JobOpening --> Mode
    JobOpening --> Address
    JobOpening --> VacanciesNumber
    JobOpening --> Description

    note right of ContractType
        Can be one of the following:
        - full-time
        - part-time
    end note

    note right of Mode
         Can be one of the following:
         - remote
         - hybrid
         - onsite
    end note

}

CustomerManager -> JobRequirementsSpecification
JobRequirementsSpecification --> JobOpening


@enduml